--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
         overflow-y: auto;
         background: #0000; padding: 0.25rem; position: absolute; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box;
         width: 35%;
-        margin-bottom: 25%;
+        margin-bottom: 30%;
       }
       #input { 
         color:  white;
@@ -44,7 +44,9 @@
         max-width: 100%;
     position: absolute;
     max-height: 40vh;
-    overflow-y: auto;list-style-type: none; margin: 0; padding: 0; }
+    overflow-y: auto;list-style-type: none; margin: 0; padding: 0; 
+overflow-x:hidden ;
+}
 
       #messages > li { padding: 0.5rem 1rem; }
       #messages > li { background: #0000;font-size: 1.5em; color: white;}
@@ -52,6 +54,8 @@
       
       }
         html{
+            width: 100%;
+            height: 100%;
             top: 0;
             left: 0;
             padding: 0;
@@ -60,6 +64,7 @@
         }
         .popUps
         {
+            z-index: 1;
             position: absolute;
             width: 80%;
             height: 80%;
